# shell-sage

./: CHANGELOG.md  CONTRIBUTING.md  README.md  hello.py  pyproject.toml  setup.py  shell_sage.rb
.github/workflows/: release.yml
shell_sage/: config.py  core.py  pane.py  prompts.py  providers.py
shell_sage/models/claude/: __init__.py  client.py  models.py  types.py  utils.py
