[project]
name = "shell-sage"
version = "0.1.0"
description = "ShellSage: AI-powered shell commands in your terminal (Fork from https://github.com/AnswerDotAI/shell_sage)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name="Nicolay Gerold", email="nicolay.gerold@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
